--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,15 @@ services:
       --datadir user_data/data/${EXCHANGE:-binance}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
+
+
+  freqtrade:
+    build:
+       context: .
+       dockerfile: "./docker/Dockerfile.custom"
+    container_name: freqtrade
+    volumes:
+      - "./user_data:/freqtrade/user_data"
+      - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
+    tty: true
+
