--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
     command: >
       backtesting
-      --strategy-list NostalgiaForInfinityNext NostalgiaForInfinityV1 SMAOffsetProtectOpt ElliotV2 ElliotV3
-      --timerange ${TIMERANGE:-20210601-20210701}
+      --strategy-list ${STRATEGIES:-NostalgiaForInfinityNext NostalgiaForInfinityV1 SMAOffsetProtectOpt ElliotV2 ElliotV3}
+      --timerange ${TIMERANGE:-20210508-20210608}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
       --max-open-trades ${MAX_OPEN_TRADES:-5}
@@ -35,7 +35,7 @@ services:
       - "./user_data:/freqtrade/user_data"
     command: >
       download-data
-      --timerange ${START_DATE:-20201201}-${END_DATE:-20210701}
+      --timerange ${START_DATE:-20210101}-${END_DATE:-20210729}
       --timeframe 5m 1h
       --datadir user_data/data/${EXCHANGE:-binance}
       --config user_data/data/pairlists.json
