--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
     command: >
       backtesting
-      --strategy-list ${STRATEGIES:-NostalgiaForInfinityV3 NostalgiaForInfinityNext NostalgiaForInfinityNext2 Combined_NFIv6_SMA SMAOffsetProtectOpt BinClucMadDevelop ElliotV3}
-      --timerange ${TIMERANGE:-20210508-20210608}
+      --strategy-list NostalgiaForInfinityNext
+      --timerange ${TIMERANGE:-20210601-20210801}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
       --max-open-trades ${MAX_OPEN_TRADES:-5}
@@ -35,22 +35,8 @@ services:
       - "./user_data:/freqtrade/user_data"
     command: >
       download-data
-      --timerange ${START_DATE:-20210101}-${END_DATE:-20210729}
+      --timerange ${START_DATE:-20201201}-${END_DATE:-20210801}
       --timeframe 5m 1h
       --datadir user_data/data/${EXCHANGE:-binance}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
-
-
-  freqtrade:
-    build:
-       context: .
-       dockerfile: "./docker/Dockerfile.custom"
-    container_name: freqtrade
-    volumes:
-      - "./user_data:/freqtrade/user_data"
-      - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
-    ports:
-       - "0.0.0.0:4406:4406"
-    tty: true
-
