--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 ---
 version: '3'
 services:
+  freqtrade:
+    build:
+       context: .
+       dockerfile: "./docker/Dockerfile.custom"
+    container_name: freqtrade
+    volumes:
+      - "./user_data:/freqtrade/user_data"
+    tty: true
+
   tests:
     build:
        context: .
@@ -19,11 +28,10 @@ services:
     container_name: freqtrade-backtesting
     volumes:
       - "./user_data:/freqtrade/user_data"
-      - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
     command: >
       backtesting
       --strategy-list ${STRATIGIES:-NostalgiaForInfinityNext}
-      --timerange ${TIMERANGE:-20210601-20210801}
+      --timerange ${TIMERANGE:-20210701-20210801}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
       --max-open-trades ${MAX_OPEN_TRADES:-5}
@@ -35,7 +43,7 @@ services:
       - "./user_data:/freqtrade/user_data"
     command: >
       download-data
-      --timerange ${START_DATE:-20201201}-${END_DATE:-20210801}
+      --timerange ${START_DATE:-20201201}-${END_DATE:-20210812}
       --timeframe 5m 1h
       --datadir user_data/data/${EXCHANGE:-binance}
       --config user_data/data/pairlists.json
