--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,21 @@ services:
     container_name: freqtrade
     volumes:
       - "./user_data:/freqtrade/user_data"
+      - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
     tty: true
 
   tests:
     build:
        context: .
        dockerfile: "./docker/Dockerfile.custom"
-    container_name: freqtrade-backtesting
+    container_name: backtesting-test
     volumes:
       - "./:/testing"
     command: >
       python -m pytest -ra -vv -s --log-cli-level=info --artifacts-path=artifacts/ ${EXTRA_ARGS:-tests/}
     entrypoint: []
     working_dir: /testing
+
   backtesting:
     build:
        context: .
@@ -28,14 +30,16 @@ services:
     container_name: freqtrade-backtesting
     volumes:
       - "./user_data:/freqtrade/user_data"
+      - "./NostalgiaForInfinityNext.py:/freqtrade/NostalgiaForInfinityNext.py"
     command: >
       backtesting
       --strategy-list ${STRATIGIES:-NostalgiaForInfinityNext}
-      --timerange ${TIMERANGE:-20210701-20210801}
+      --timerange ${TIMERANGE:-20210701-20210811}
       --config user_data/data/pairlists.json
       --config user_data/data/${EXCHANGE:-binance}-usdt-static.json
       --max-open-trades ${MAX_OPEN_TRADES:-5}
       --stake-amount ${STAKE_AMOUNT:-unlimited}
+
   download-data:
     image: freqtradeorg/freqtrade:develop
     container_name: download-data
